--- a/frontend/pages/home/home.html
+++ b/frontend/pages/home/home.html
@@ -15,6 +15,19 @@
       </div>
       
     <canvas id="myChart" style="width:100%;width: 100vw;"></canvas>
+
+    <table>
+        <tr>
+          <th>Name</th>
+          <th>Temperature</th>
+          <th>Date</th>
+          <th>TempHigh</th>
+          <th>TempLow</th>
+        </tr>
+        <tbody id="TemperatureTable">
+
+        </tbody>
+      </table>
 </body>
     <link rel="stylesheet" href="home.css">
     <script type="module" src="home.js"></script>
