--- a/frontend/pages/home/home.html
+++ b/frontend/pages/home/home.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temperature-Alarm-Web</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-</head>
-<body>
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-      </div>
-      
-    <canvas id="myChart" style="width:100%;width: 100vw;"></canvas>
+  </head>
 
-    <table>
+  <body>
+    <div id="container">
+      <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news" id="myBtn">View Chart</a>
+      </div>
+
+      <div id="chartModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <canvas id="myChart" style="width: 80%; width: 80%"></canvas>
+        </div>
+      </div>
+
+      <table>
         <tr>
           <th>Name</th>
           <th>Temperature</th>
@@ -24,11 +29,10 @@
           <th>TempHigh</th>
           <th>TempLow</th>
         </tr>
-        <tbody id="TemperatureTable">
-
-        </tbody>
+        <tbody id="TemperatureTable"></tbody>
       </table>
-</body>
-    <link rel="stylesheet" href="home.css">
-    <script type="module" src="home.js"></script>
+    </div>
+  </body>
+  <link rel="stylesheet" href="home.css" />
+  <script type="module" src="home.js"></script>
 </html>
