--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -33,6 +33,6 @@
       </table>
     </div>
   </body>
-  <link rel="stylesheet" href="home.css" />
-  <script type="module" src="home.js"></script>
+  <link rel="stylesheet" href="/styles/home.css" />
+  <script type="module" src="/scripts/home.js"></script>
 </html>
