--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -23,14 +23,14 @@
             <input type="checkbox" name="remember"> Remember me
           </label>
           <label>
-            Dont have an account? <a href="../register/register.html">Register</a>
+            Dont have an account? <a href="./login.html">Register</a>
           </label>
         </div>
       </div>
     </form>
   </div>
 </body>
-<link rel="stylesheet" href="login.css">
-<script type="module" src="login.js"></script>
+<link rel="stylesheet" href="/styles/login.css">
+<script type="module" src="/scripts/login.js"></script>
 
 </html>
