--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -25,7 +25,7 @@
                 <button type="submit">Register</button>
                 <div class="loginText">
                     <label>
-                        Already have an account? <a href="../login/login.html">Login</a>
+                        Already have an account? <a href="./home.html">Login</a>
                     </label>
                 </div>
             </div>
@@ -33,7 +33,7 @@
     </div>
 </body>
 
-<link rel="stylesheet" href="register.css">
-<script type="module" src="register.js"></script>
+<link rel="stylesheet" href="/styles/register.css">
+<script type="module" src="/scripts/register.js"></script>
 
 </html>
