Create front page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,25 @@
-<meta http-equiv="refresh" content="0; url=/login" />
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Temperature Alarm</title>
+		<link rel="stylesheet" href="/styles/frontpage.css">
+	</head>
+	<body>
+		<main>
+			<div id="title">
+				<h1>Temperature Alarm</h1>
+
+				<div id="buttons-wrapper">
+					<a href="/login">
+						<button class="secondary">Login</button>
+					</a>
+					<a href="/register">
+						<button class="primary">Sign up</button>
+					</a>
+				</div>
+			</div>
+		</main>
+	</body>
+</html>
+
