--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -10,17 +10,11 @@
   <body>
     <div id="container">
       <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news" id="myBtn">View Chart</a>
+        <a class="active" href="/home/index.html">Home</a>
       </div>
-
-      <div id="chartModal" class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <canvas id="myChart" style="width: 80%; width: 80%"></canvas>
-        </div>
+      <div class="chartContainer">
+        <canvas id="myChart" style="width: 49%; height: 49%;"></canvas>
       </div>
-
       <table>
         <tr>
           <th>Name</th>
