Add logo to frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,10 @@
 	<body>
 		<main>
 			<div id="title">
-				<h1>Temperature Alarm</h1>
+				<h1>
+					<img id="logo" src="/img/logo.webp" alt="Logo">
+					Temperature Alarm
+				</h1>
 
 				<div id="buttons-wrapper">
 					<a href="/login">
