profile site started on

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temperature-Alarm-Web</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <link rel="stylesheet" href="/styles/home.css" />
+    <script type="module" src="/scripts/home.js"></script>
   </head>
 
   <body>
     <div id="container">
       <div class="topnav">
         <a class="active" href="/home/index.html">Home</a>
+        <div style="display: flex; justify-content: flex-end;">
+          <a class="" href="/home/index.html">Devices</a>
+          <a class="" href="/profile/index.html">Profile</a>
+        </div>
       </div>
       <div class="chartContainer">
         <canvas id="myChart" style="width: 49%; height: 49%;"></canvas>
@@ -27,6 +33,4 @@
       </table>
     </div>
   </body>
-  <link rel="stylesheet" href="/styles/home.css" />
-  <script type="module" src="/scripts/home.js"></script>
 </html>
