profile gets data from db, changes to edituser

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temperature-Alarm-Web</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <link rel="stylesheet" href="/styles/auth.css">
     <link rel="stylesheet" href="/styles/home.css" />
     <script type="module" src="/scripts/home.js"></script>
   </head>
