--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <title>Temperature Alarm</title>
         <link rel="stylesheet" href="/styles/frontpage.css">
+        <link rel="stylesheet" href="/styles/auth.css">
+
     </head>
     <body>
         <main>
