--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -21,7 +21,7 @@
                 <button type="submit">Login</button>
                 <div class="details">
                     <label>
-                        <input type="checkbox" name="remember"> Remember me
+                        <input type="checkbox" name="remember" id="rememberId"> Remember me
                     </label>
                     <span>
                         Dont have an account? <a href="/register">Register</a>
