--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -8,15 +8,19 @@
     <link rel="stylesheet" href="/styles/auth.css">
     <link rel="stylesheet" href="/styles/home.css" />
     <script type="module" src="/scripts/home.js"></script>
+    <script defer type="module" src="/shared/utils.js"></script>
   </head>
 
   <body>
     <div id="container">
       <div class="topnav">
         <a class="active" href="/home/index.html">Home</a>
+        <a href="/devices/index.html">Devices</a>
         <div style="display: flex; justify-content: flex-end;">
-          <a class="" href="/home/index.html">Devices</a>
-          <a class="" href="/profile/index.html">Profile</a>
+          <a href="/profile/index.html">Profile</a>
+          <span class="logoutContainer">
+            <img class="logout" src="/img/logout.png">
+          </span>
         </div>
       </div>
       <div class="chartContainer">
