--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -10,7 +10,7 @@
     <body>
         <form id="registerForm">
             <div class="form-container">
-                <h1>Create Account</h1>
+                <h1>Sign Up</h1>
 
                 <label for="email"><b>Email</b></label>
                 <input type="email" placeholder="Enter email "id="email" required>
