device table header

--- a/frontend/devices/index.html
+++ b/frontend/devices/index.html
@@ -23,6 +23,9 @@
               </span>
             </div>
           </div>
+          <div class="addDeviceContainer">
+            <button class="addDevice">Add Device</button>
+          </div>
       <table>
         <tr>
           <th>Id</th>
