devices half made

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -26,16 +26,18 @@
       <div class="chartContainer">
         <canvas id="myChart" style="width: 49%; height: 49%;"></canvas>
       </div>
-      <table>
-        <tr>
-          <th>Name</th>
-          <th>Temperature</th>
-          <th>Date</th>
-          <th>TempHigh</th>
-          <th>TempLow</th>
-        </tr>
-        <tbody id="TemperatureTable"></tbody>
-      </table>
+      <div class="tableConatiner">
+        <table>
+          <tr>
+            <th>Name</th>
+            <th>Temperature</th>
+            <th>Date</th>
+            <th>TempHigh</th>
+            <th>TempLow</th>
+          </tr>
+          <tbody id="TemperatureTable"></tbody>
+        </table>
+      </div>
     </div>
   </body>
 </html>
