--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Temperature-Alarm-Web</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-        <link rel="stylesheet" href="/styles/home.css" />
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
         <script defer type="module" src="/scripts/home.js"></script>
+        <link rel="stylesheet" href="/styles/common.css">
+        <link rel="stylesheet" href="/styles/home.css" />
     </head>
 
     <body>
@@ -33,6 +34,7 @@
                 </table>
             </div>
         </div>
+        <div id="error" class="error"></div>
     </body>
 </html>
 
