--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Register - Temperature Alarm</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/styles/common.css">
         <link rel="stylesheet" href="/styles/auth.css">
         <script defer type="module" src="/scripts/register.js"></script>
     </head>
@@ -33,7 +34,7 @@
                     </label>
                 </div>
 
-                <div id="form-error"></div>
+                <div id="form-error" class="error"></div>
             </div>
         </form>
     </body>
