--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -8,16 +8,20 @@
         <script defer type="module" src="/scripts/home.js"></script>
         <link rel="stylesheet" href="/styles/common.css">
         <link rel="stylesheet" href="/styles/home.css" />
+        <link rel="stylesheet" href="/styles/auth.css" />
     </head>
 
     <body>
         <div class="topnav">
             <a class="active" href="/home/index.html">Home</a>
             <div style="display: flex; justify-content: flex-end;">
-                <a class="" href="/home/index.html">Devices</a>
-                <a class="" href="/profile/index.html">Profile</a>
+                <a href="/devices/index.html">Devices</a>
+              <a  href="/profile/index.html">Profile</a>
+              <span class="logoutContainer">
+                <img class="logout" src="/img/logout.png">
+              </span>
             </div>
-        </div>
+          </div>
         <div id="container">
             <div class="chart-container">
                 <canvas id="myChart" style="width: 49%; height: 49%;"></canvas>
