--- a/frontend/devices/index.html
+++ b/frontend/devices/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/styles/auth.css">
     <link rel="stylesheet" href="/styles/devices.css" />
     <script defer type="module" src="/scripts/devices.js"></script>
-    <script defer type="module" src="/shared/utils.js"></script>
   </head>
 
   <body>
@@ -16,9 +15,9 @@
       <div class="topnav">
         <a href="/home/index.html">Home</a>
         <div style="display: flex; justify-content: flex-end;">
-            <a class="active" href="/devices/index.html">Devices</a>
-          <a href="/profile/index.html">Profile</a>
-          <span class="logoutContainer">
+            <a class="active" href="/devices">Devices</a>
+          <a href="/profile">Profile</a>
+          <span class="logout-container">
             <img class="logout" src="/img/logout.png">
           </span>
         </div>
