--- a/frontend/profile/index.html
+++ b/frontend/profile/index.html
@@ -7,16 +7,15 @@
         <link rel="stylesheet" href="/styles/auth.css">
         <link rel="stylesheet" href="/styles/profile.css">
         <script defer type="module" src="/scripts/profile.js"></script>
-        <script defer type="module" src="/shared/utils.js"></script>
     </head>
     <body>
         <div id="container">
             <div class="topnav">
                 <a href="/home/index.html">Home</a>
                 <div style="display: flex; justify-content: flex-end;">
-                    <a href="/devices/index.html">Devices</a>
-                  <a class="active" href="/profile/index.html">Profile</a>
-                  <span class="logoutContainer">
+                    <a href="/devices">Devices</a>
+                  <a class="active" href="/profile">Profile</a>
+                  <span class="logout-container">
                     <img class="logout" src="/img/logout.png">
                   </span>
                 </div>
