--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -15,9 +15,9 @@
         <div class="topnav">
             <a class="active" href="/home/index.html">Home</a>
             <div style="display: flex; justify-content: flex-end;">
-                <a href="/devices/index.html">Devices</a>
-              <a  href="/profile/index.html">Profile</a>
-              <span class="logoutContainer">
+                <a href="/devices">Devices</a>
+              <a  href="/profile">Profile</a>
+              <span class="logout-container">
                 <img class="logout" src="/img/logout.png">
               </span>
             </div>
