--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8" />
         <title>Temperature Alarm</title>
         <link rel="stylesheet" href="/styles/frontpage.css">
+        <script type="module">
+            import { isLoggedIn } from "./shared/utils.js";
+
+            if (isLoggedIn()) {
+                location.href = "/home";
+            }
+        </script>
     </head>
     <body>
         <main>
