Fix data decimation

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <div class="topnav">
-            <a class="active" href="/home/index.html">Home</a>
+            <a class="active" href="/home">Home</a>
             <div style="display: flex; justify-content: flex-end;">
                 <a href="/devices">Devices</a>
               <a  href="/profile">Profile</a>
