almost done with devices

--- a/frontend/devices/index.html
+++ b/frontend/devices/index.html
@@ -65,10 +65,10 @@
                     <input type="text" placeholder="Enter a name for the placement" id="name" required>
   
                     <label for="tempHigh"><b>High Temperature</b></label>
-                    <input type="text" placeholder="Edit the high temperature" id="tempHigh" required>
+                    <input type="number" placeholder="Edit the high temperature" id="tempHigh" required>
     
                     <label for="tempLow"><b>Low Temperature</b></label>
-                    <input type="text" placeholder="Edit the low temperature" id="tempLow" required>
+                    <input type="number" placeholder="Edit the low temperature" id="tempLow" required>
     
                     <div class="clearfix">
                       <button type="button" class="cancelbtn">Cancel</button>
