--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -28,6 +28,20 @@
             <div class="chart-container">
                 <canvas id="myChart" style="width: 49%; height: 49%;"></canvas>
             </div>
+
+            <div id="filters">
+                <div>
+                    <div class="form-control">
+                        <label for="device-selector">Select device</label>
+                        <select id="device-selector">
+
+                        </select>
+                    </div>
+                </div>
+
+                <div></div>
+            </div>
+
             <div id="table-wrapper">
                 <table>
                     <thead>
