--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -26,20 +26,38 @@
           </div>
         <div id="container">
             <div class="chart-container">
-                <canvas id="myChart" style="width: 49%; height: 49%;"></canvas>
+                <canvas id="chart" height="400"></canvas>
             </div>
 
             <div id="filters">
                 <div>
                     <div class="form-control">
                         <label for="device-selector">Select device</label>
-                        <select id="device-selector">
-
-                        </select>
+                        <select id="device-selector"></select>
                     </div>
                 </div>
 
-                <div></div>
+                <div>
+                    <div class="form-control">
+                        <label>&nbsp;</label>
+                        <div id="period-templates">
+                            <div class="period-template last-x-days" data-days="0">Today</div>
+                            <div class="period-template last-x-days" data-days="3">Last 3 days</div>
+                            <div class="period-template last-x-days" data-days="7">Last week</div>
+                            <div class="period-template" id="all-time">All time</div>
+                        </div>
+                    </div>
+
+                    <div class="form-control">
+                        <label for="period-start">Start</label>
+                        <input id="period-start" type="datetime-local">
+                    </div>
+
+                    <div class="form-control">
+                        <label for="period-end">End</label>
+                        <input id="period-end" type="datetime-local">
+                    </div>
+                </div>
             </div>
 
             <div id="table-wrapper">
