Use local timezone on dashboard

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Temperature-Alarm-Web</title>
         <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script defer src="https://cdn.jsdelivr.net/npm/moment"></script>
-        <script defer src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/luxon"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon"></script>
         <script defer type="module" src="/scripts/home.js"></script>
         <link rel="stylesheet" href="/styles/common.css">
         <link rel="stylesheet" href="/styles/home.css" />
