--- a/frontend/devices/index.html
+++ b/frontend/devices/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temperature-Alarm-Web</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-    <link rel="stylesheet" href="/styles/auth.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/luxon"></script>
+        <link rel="stylesheet" href="/styles/auth.css">
     <link rel="stylesheet" href="/styles/devices.css" />
     <script defer type="module" src="/scripts/devices.js"></script>
   </head>
