Fix changing password in frontend

--- a/frontend/profile/index.html
+++ b/frontend/profile/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Register - Temperature Alarm</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/styles/common.css">
         <link rel="stylesheet" href="/styles/auth.css">
         <link rel="stylesheet" href="/styles/profile.css">
         <script defer type="module" src="/scripts/profile.js"></script>
@@ -67,7 +68,7 @@
         
                         <button type="submit">Change Password</button>
         
-                        <div id="form-error"></div>
+                        <div id="password-error" class="error"></div>
                     </div>
                 </form>
             </div>
