--- a/frontend/profile/index.html
+++ b/frontend/profile/index.html
@@ -45,7 +45,7 @@
                         <input type="text" placeholder="Enter username" id="uname" required>
         
                         <button id="submitEditBtn" type="submit">Save Changes</button>
-        
+                        <div id="editprofile-error" class="error"></div>
                     </div>
                 </form>
             </div>
