--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -26,7 +26,7 @@
                     </span>
                 </div>
 
-                <div id="form-error" class="error"></div>
+                <div id="login-error" class="error"></div>
             </div>
         </form>
     </body>
